--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "./node_modules/aos/dist/aos.css",
               "src/assets/frontent_files/css/responsive.css"
             ],
             "scripts": []
