--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.0.0",
     "aos": "^2.3.4",
     "aws-amplify": "^5.2.5",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
